--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!--DESC-->
+    <meta name="description"
+        content="AS-Soluciones integrales es una empresa especializada en instalación de aires acondicionados, termotanques solares, energía solar, proyectos de instalación eléctrica y sistemas de vigilancia. También ofrecemos servicios de electricidad y certificaciones eléctricas. ¡Contáctanos y obtén soluciones integrales para tu hogar o negocio!">
+    <!--ESTILOS-->
+    <link rel="stylesheet" href="css/init.css">
+    <link rel="stylesheet" href="css/cabecera.css">
+
+    <!--META-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AS-Servicios Integrales</title>
+    <title>AS - Servicios Integrales</title>
 </head>
+
 <body>
-    
+    <header class="cabecera">
+        <div class="cabecera_centrar">
+            <div class="sec_cabecera logo"></div>
+            <nav class="sec_cabecera menu_cabecera">
+                <li class="menu_item">INICIO</li>
+                <li class="menu_item">OBRAS Y SERVICIOS</li>
+                <li class="menu_item">CLIENTES</li>
+                <li class="menu_item">CONTACTO</li>
+            </nav>
+        </div>
+    </header>
 </body>
+
 </html>
