--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/init.css">
     <link rel="stylesheet" href="css/cabecera.css">
-
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/secciones.css">
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <!--META-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,9 +23,9 @@
 
 <body>
     <header class="cabecera">
-        <div class="cabecera_centrar">
-            <div class="sec_cabecera logo"></div>
-            <nav class="sec_cabecera menu_cabecera">
+        <div class="cabecera_center">
+            <div class="cabecera_item logo"></div>
+            <nav class="cabecera_item menu">
                 <li class="menu_item">INICIO</li>
                 <li class="menu_item">OBRAS Y SERVICIOS</li>
                 <li class="menu_item">CLIENTES</li>
@@ -28,6 +33,20 @@
             </nav>
         </div>
     </header>
+    <main class="principal">
+        <section class="sec inicio">
+            <div class="cont"></div>
+        </section>
+        <section class="sec obra">
+            <div class="cont"></div>
+        </section>
+        <section class="sec clientes">
+            <div class="cont"></div>
+        </section>
+        <section class="sec contacto">
+            <div class="cont"></div>
+        </section>
+    </main>
 </body>
 
 </html>
