frenando por hoy

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/cabecera.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/secciones.css">
+    <link rel="stylesheet" href="css/inicio.css">
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,16 +36,28 @@
     </header>
     <main class="principal">
         <section class="sec inicio">
-            <div class="cont"></div>
+            <div class="cont inicio_cont">
+                <div class="div inicio_div">
+                    <div class="sec_inicio inicio_logo"></div>
+                    <div class="sec_inicio inicio_texto"></div>
+                </div>
+                
+            </div>
         </section>
         <section class="sec obra">
-            <div class="cont"></div>
+            <div class="cont">
+                <div class="div"></div>
+            </div>
         </section>
         <section class="sec clientes">
-            <div class="cont"></div>
+            <div class="cont">
+                <div class="div"></div>
+            </div>
         </section>
         <section class="sec contacto">
-            <div class="cont"></div>
+            <div class="cont">
+                <div class="div"></div>
+            </div>
         </section>
     </main>
 </body>
