Finalizada version pc cabecera

--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/init.css">
     <link rel="stylesheet" href="css/cabecera.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/secciones.css">
-    <link rel="stylesheet" href="css/inicio.css">
     <!--Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <!--META-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,39 +21,31 @@
         <div class="cabecera_center">
             <div class="cabecera_item logo"></div>
             <nav class="cabecera_item menu">
-                <li class="menu_item">INICIO</li>
-                <li class="menu_item">OBRAS Y SERVICIOS</li>
-                <li class="menu_item">CLIENTES</li>
-                <li class="menu_item">CONTACTO</li>
+                <li class="menu_item">INICIO <svg></svg></li>
+                <li class="menu_item">OBRAS Y SERVICIOS<svg></svg></li>
+                <li class="menu_item">CLIENTES<svg></svg></li>
+                <li class="menu_item">CONTACTO<svg></svg></li>
             </nav>
         </div>
     </header>
+
     <main class="principal">
         <section class="sec inicio">
-            <div class="cont inicio_cont">
-                <div class="div inicio_div">
-                    <div class="sec_inicio inicio_logo"></div>
-                    <div class="sec_inicio inicio_texto"></div>
-                </div>
-                
-            </div>
+            <div class="cont"></div>
         </section>
-        <section class="sec obra">
-            <div class="cont">
-                <div class="div"></div>
-            </div>
+        <section class="sec obras">
+            <div class="cont"></div>
         </section>
         <section class="sec clientes">
-            <div class="cont">
-                <div class="div"></div>
-            </div>
+            <div class="cont"></div>
         </section>
         <section class="sec contacto">
-            <div class="cont">
-                <div class="div"></div>
-            </div>
+            <div class="cont"></div>
         </section>
     </main>
+    <footer class="pie">
+        <li>PAGINA DESARROLLADA POR <a href="">AGNIS - SOLUCIONES WEB &copy;</a></li>
+    </footer>
 </body>
 
 </html>
