Finalizado parte visual del menu

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 
     <main class="principal">
         <nav class="sliderMenu">
-            <li class="menu_item"></li>
-            <li class="menu_item"></li>
-            <li class="menu_item"></li>
-            <li class="menu_item"></li>
+            <div class="sliderMenu-d">
+                <li class="menu_itemS">INICIO <svg></svg></li>
+                <li class="menu_itemS">OBRAS Y SERVICIOS<svg></svg></li>
+                <li class="menu_itemS">CLIENTES<svg></svg></li>
+                <li class="menu_itemS">CONTACTO<svg></svg></li>
+            </div>
         </nav>
         <section class="sec inicio">
             <div class="cont"></div>
