--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="css/init.css">
     <link rel="stylesheet" href="css/cabecera.css">
     <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/sections.css">
+    <link rel="stylesheet" href="css/inicio.css">
 
     <link rel="stylesheet" href="css/resp.css">
-    <!--Fonts-->
+    <link rel="stylesheet" href="css/mode.css">
+    <!--ICONS-->
+    <script src="https://kit.fontawesome.com/c8bf7962f3.js" crossorigin="anonymous"></script>
     <!--META-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +23,7 @@
     <title>AS - Servicios Integrales</title>
 </head>
 
-<body>
+<body class="cuerpo">
     <header class="cabecera">
         <div class="cabecera_center">
             <div class="cabecera_item logo">
@@ -30,39 +34,60 @@
                 </div>
             </div>
             <nav class="cabecera_item menu">
-                <li class="menu_item">INICIO <svg></svg></li>
-                <li class="menu_item">OBRAS Y SERVICIOS<svg></svg></li>
-                <li class="menu_item">CLIENTES<svg></svg></li>
-                <li class="menu_item">CONTACTO<svg></svg></li>
+                <li class="menu_item">INICIO <svg class="esevege"></svg></li>
+                <li class="menu_item">OBRAS Y SERVICIOS<svg class="esevege"></svg></li>
+                <li class="menu_item">CLIENTES<svg class="esevege"></svg></li>
+                <li class="menu_item">CONTACTO<svg class="esevege"></svg></li>
             </nav>
         </div>
+        <i class="fa-regular fa-lightbulb"></i>
     </header>
-
+    <div class="absolutoMenu">
+                    
+    </div>
     <main class="principal">
         <nav class="sliderMenu">
             <div class="sliderMenu-d">
-                <li class="menu_itemS">INICIO <svg></svg></li>
-                <li class="menu_itemS">OBRAS Y SERVICIOS<svg></svg></li>
-                <li class="menu_itemS">CLIENTES<svg></svg></li>
-                <li class="menu_itemS">CONTACTO<svg></svg></li>
+                <li class="menu_itemS">INICIO <svg class="svgSlider"></svg></li>
+                <li class="menu_itemS">OBRAS Y SERVICIOS<svg class="svgSlider"></svg></li>
+                <li class="menu_itemS">CLIENTES<svg class="svgSlider"></svg></li>
+                <li class="menu_itemS">CONTACTO<svg class="svgSlider"></svg></li>
             </div>
         </nav>
+        
         <section class="sec inicio">
-            <div class="cont"></div>
+            <div class="cont cont_inicio">
+                <div class="inicio_cont_secciones">
+                    <div class="inicio_areas inicio_derecha"></div>
+                    <div class="inicio_areas inicio_izquierda">
+                        <div class="cont1">
+                            <div class="cont2">
+                                <div class="text">
+                                    <h2>Construyendo tu futuro con acero</h2>
+                                    <h1>confía en AS </h1>
+                                    <h4 class="legend">y el poder del Steel Framing</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="sec obras">
-            <div class="cont"></div>
+            <div class="cont cont_obras"></div>
         </section>
         <section class="sec clientes">
-            <div class="cont"></div>
+            <div class="cont cont_clientes"></div>
         </section>
         <section class="sec contacto">
-            <div class="cont"></div>
+            <div class="cont cont_contacto"></div>
         </section>
     </main>
     <footer class="pie">
         <li>PAGINA DESARROLLADA POR <a href="">AGNIS - SOLUCIONES WEB &copy;</a></li>
     </footer>
+    <script src="js/bgInicio.js"></script>
+    <script src="js/buttonMode.js"></script>
     <script src="js/slider.js"></script>
 </body>
 
