--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/sections.css">
     <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="css/obras.css">
 
-    <link rel="stylesheet" href="css/resp.css">
     <link rel="stylesheet" href="css/mode.css">
+    <link rel="stylesheet" href="css/resp.css">
+
     <!--ICONS-->
     <script src="https://kit.fontawesome.com/c8bf7962f3.js" crossorigin="anonymous"></script>
     <!--META-->
@@ -63,9 +65,10 @@
                         <div class="cont1">
                             <div class="cont2">
                                 <div class="text">
-                                    <h2>Construyendo tu futuro con acero</h2>
-                                    <h1>confía en AS </h1>
-                                    <h4 class="legend">y el poder del Steel Framing</h4>
+                                    <p>Somos una empresa especializada en ejecutar tu construccion, con todos los servicios que necesites</p>
+                                    <p>En las obras nuevas nos encargamos de la planificacion total.</p>
+                                    <p>¡Llave en mano!</p>
+                                    <p>Tambien llevamos a cambio tu ampliacion de la manera mas eficaz.</p>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +77,18 @@
             </div>
         </section>
         <section class="sec obras">
-            <div class="cont cont_obras"></div>
+            <div class="cont cont_obras">
+                <div class="sector_obras obras_text"></div>
+                <div class="sector_obras obras_video">
+                    <video autoplay muted loop>
+                        <source src="recursos/imagenes/steelF.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="absoluto2">
+                    <div class="sector_obras texto_obras"></div>
+                    <div class="sector_obras"></div>
+                </div>
+            </div>
         </section>
         <section class="sec clientes">
             <div class="cont cont_clientes"></div>
