finalizado hasta nuevo aviso obras

--- a/index.html
+++ b/index.html
@@ -85,7 +85,36 @@
                     </video>
                 </div>
                 <div class="absoluto2">
-                    <div class="sector_obras texto_obras"></div>
+                    <div class="sector_obras texto_obras">
+                        <h2>Construyendo el futuro con estructuras de acero</h2>
+                        <h4>Nos Especializamos en</h4>
+                        <div class="cont_tarjetas">
+                            <div class="tarjeta steel">
+                                <img src="/recursos/imagenes/STEEL.FRAMING.png" alt="">
+                                Steel Framing
+                            </div>
+                            <div class="tarjeta electricidad">
+                                <img src="/recursos/imagenes/Electric.png" alt="">
+                                certificaciones electricas
+                            </div>
+                            <div class="tarjeta aires">
+                                <img src="/recursos/imagenes/AIRE.ACONDICIONADO.png" alt="">
+                                instlaacion de aires acondicionados
+                            </div>
+                            <div class="tarjeta videovigilancia">
+                                <img src="/recursos/imagenes/CAM.SEG.png" alt="">
+                                instalacion de camaras de video vigilacia
+                            </div>
+                            <div class="tarjeta termotanques">
+                                <img src="/recursos/imagenes/solar-termica.png" alt="">
+                                Instalacion y mantenimiento de termotanques
+                            </div>
+                            <div class="tarjeta paneles">
+                                <img src="/recursos/imagenes/PANEL.SOLAR.png" alt="">
+                                Instalacion y mantenimiento de paneles solares
+                            </div>
+                        </div>
+                    </div>
                     <div class="sector_obras"></div>
                 </div>
             </div>
