--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
                         <h4>Nos Especializamos en</h4>
                         <div class="cont_tarjetas">
                             <div class="tarjeta steel">
-                                <img src="/recursos/imagenes/STEEL.FRAMING.png" alt="">
+                                <img src="recursos/imagenes/STEEL.FRAMING.png" alt="">
                                 Steel Framing
                             </div>
                             <div class="tarjeta electricidad">
-                                <img src="/recursos/imagenes/Electric.png" alt="">
-                                certificaciones electricas
+                                <img src="recursos/imagenes/Electric.png" alt="">
+                                Certificaciones Electricas
                             </div>
                             <div class="tarjeta aires">
-                                <img src="/recursos/imagenes/AIRE.ACONDICIONADO.png" alt="">
-                                instlaacion de aires acondicionados
+                                <img src="recursos/imagenes/AIRE.ACONDICIONADO.png" alt="">
+                                Instalacion de Aires Acondicionados
                             </div>
                             <div class="tarjeta videovigilancia">
-                                <img src="/recursos/imagenes/CAM.SEG.png" alt="">
-                                instalacion de camaras de video vigilacia
+                                <img src="recursos/imagenes/CAM.SEG.png" alt="">
+                                Instalacion de Camaras de Video Vigilacia
                             </div>
                             <div class="tarjeta termotanques">
-                                <img src="/recursos/imagenes/solar-termica.png" alt="">
-                                Instalacion y mantenimiento de termotanques
+                                <img src="recursos/imagenes/solar-termica.png" alt="">
+                                Instalacion y Mantenimiento de Termotanques
                             </div>
                             <div class="tarjeta paneles">
-                                <img src="/recursos/imagenes/PANEL.SOLAR.png" alt="">
-                                Instalacion y mantenimiento de paneles solares
+                                <img src="recursos/imagenes/PANEL.SOLAR.png" alt="">
+                                Instalacion y Mantenimiento de Paneles Solares
                             </div>
                         </div>
                     </div>
