Finalizada parte visual

--- a/index.html
+++ b/index.html
@@ -168,7 +168,17 @@
                         <button disabled="disabled">ENVIAR</button>
                     </form>
                 </div>
-                <div class="parte_Contacto redes"></div>
+                <div class="parte_Contacto redes_cont">
+                    <div class="contenedor_redes">
+                        <h2>O siguenos en nuestras redes</h2>
+                        <div class="redes">
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-square-twitter"></i>
+                            <i class="fa-brands fa-square-instagram"></i>
+                            <i class="fa-brands fa-square-whatsapp"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
