--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="absoluto2">
                     <div class="sector_obras texto_obras">
-                        <h2>Construyendo el futuro con estructuras de acero</h2>
+                        <h2>Construyendo Tu futuro</h2>
                         <h4>Nos Especializamos en</h4>
                         <div class="cont_tarjetas">
                             <div class="tarjeta steel">
@@ -100,23 +100,23 @@
                             </div>
                             <div class="tarjeta electricidad">
                                 <img src="recursos/imagenes/electric.png" alt="">
-                                Certificaciones Electricas
+                                Electricidad
                             </div>
                             <div class="tarjeta aires">
                                 <img src="recursos/imagenes/AIRE.ACONDICIONADO.png" alt="">
-                                Instalacion de Aires Acondicionados
+                                Aires Acondicionados
                             </div>
                             <div class="tarjeta videovigilancia">
                                 <img src="recursos/imagenes/CAM.SEG.png" alt="">
-                                Instalacion de Camaras de Video Vigilacia
+                                Camaras de Seguridad
                             </div>
                             <div class="tarjeta termotanques">
                                 <img src="recursos/imagenes/solar-termica.png" alt="">
-                                Instalacion y Mantenimiento de Termotanques
+                                Termotanques Solares
                             </div>
                             <div class="tarjeta paneles">
                                 <img src="recursos/imagenes/PANEL.SOLAR.png" alt="">
-                                Instalacion y Mantenimiento de Paneles Solares
+                                Paneles Solares
                             </div>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                         <p> nos enorgullecemos de proporcionar soluciones diseñadas a medida y adaptadas a las
                             necesidades de cada cliente.</p>
                         <legend>¡Únete a nuestra lista de clientes satisfechos hoy mismo!</legend>
-                        <button>MIRA NUESTROS TRABAJOS</button>
+                        <button class="btn-cliente">MIRA NUESTROS TRABAJOS</button>
                     </div>
                 </div>
             </div>
@@ -184,6 +184,7 @@
     <footer class="pie">
         <li>PAGINA DESARROLLADA POR <a href="">AGNIS - SOLUCIONES WEB &copy;</a></li>
     </footer>
+    <script src="js/buttons.js"></script>
     <script src="js/bgInicio.js"></script>
     <script src="js/buttonMode.js"></script>
     <script src="js/slider.js"></script>
