--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <input type="email" name="email" id="email">
                         <label for="numero">TELEFONO</label>
                         <input type="text" name="numero" id="numero">
-                        <button disabled="disabled">ENVIAR</button>
+                        <button class="EnviarFormulario">ENVIAR</button>
                     </form>
                 </div>
                 <div class="parte_Contacto redes_cont">
@@ -184,6 +184,7 @@
     <footer class="pie">
         <li>PAGINA DESARROLLADA POR <a href="">AGNIS - SOLUCIONES WEB &copy;</a></li>
     </footer>
+    <script src="js/form.js"></script>
     <script src="js/servicios.js"></script>
     <script src="js/buttons.js"></script>
     <script src="js/bgInicio.js"></script>
