--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
     <footer class="pie">
         <li>PAGINA DESARROLLADA POR <a href="">AGNIS - SOLUCIONES WEB &copy;</a></li>
     </footer>
+    <script src="js/carrusel"></script>
     <script src="js/form.js"></script>
     <script src="js/servicios.js"></script>
     <script src="js/buttons.js"></script>
