Solucionadas las ultimas modificacioens

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                         <select name="select" id="select">
                             <option value="1">STEEL FRAMING</option>
                             <option value="2">VIDEO VIGILANCIA</option>
-                            <option value="3">INST. AIRE ACONDICIONADOS</option>
-                            <option value="4">INST. TERMOTANQUES</option>
-                            <option value="5">INST. ELECTRICA</option>
-                            <option value="6">INST. PANELES SOLARES</option>
+                            <option value="3">AIRE ACONDICIONADOS</option>
+                            <option value="4">TERMOTANQUES</option>
+                            <option value="5">ELECTRICA</option>
+                            <option value="6">PANELES SOLARES</option>
                         </select>
                         <label for="nombre">TU NOMBRE</label>
                         <input type="text" name="nombre" id="nombre">
