--- a/index.html
+++ b/index.html
@@ -126,24 +126,46 @@
             </div>
         </section>
 
-        <section class="sec clientes">
-            <div class="cont cont_clientes">
-                <div class="clientes_sec">
-                    <div class="secciones_clientes galeria">
-                        <li><img src="recursos/imagenes/img1.jpg" alt="" srcset=""></li>
-                        <li><img src="recursos/imagenes/img2.jpg" alt="" srcset=""></li>
-                        <li><img src="recursos/imagenes/img3.jpg" alt="" srcset=""></li>
-                        <li><img src="recursos/imagenes/img4.jpg" alt="" srcset=""></li>
-                        <li><img src="recursos/imagenes/img5.jpg" alt="" srcset=""></li>
-                        <li><img src="recursos/imagenes/img6.jpg" alt="" srcset=""></li>
-                    </div>
-                    <div class="secciones_clientes clientes_texto">
-                        <h2>Clientes satisfechos, nuestra mayor satisfacción</h2>
-                        <p> nos enorgullecemos de proporcionar soluciones diseñadas a medida y adaptadas a las
-                            necesidades de cada cliente.</p>
-                        <legend>¡Únete a nuestra lista de clientes satisfechos hoy mismo!</legend>
-                        <button class="btn-cliente">MIRA NUESTROS TRABAJOS</button>
-                    </div>
+        <section class="clientes">
+            <div class="cont-clientes">
+                <div class="contenido clientes_texto">
+                    <h2>Clientes satisfechos, nuestra mayor satisfacción</h2>
+                    <p class=""> nos enorgullecemos de proporcionar soluciones diseñadas a medida y adaptadas a las necesidades de cada cliente.</p>
+                    <legend class="">¡Únete a nuestra lista de clientes satisfechos hoy mismo!</legend>
+                </div>
+                <div class="contenido clientes_imagenes">
+                    <li><img src="recursos/AA/aa-1(1).jpeg" alt=""></li>
+                    <li><img src="recursos/AA/aa-1(2).jpg" alt=""></li>
+                    <li><img src="recursos/AA/aa-1(3).jpg" alt=""></li>
+                    <li><img src="recursos/AA/aa-1(4).jpg" alt=""></li>
+                    <li><img src="recursos/ELE/ele(1).jpg" alt=""></li>
+                    <li><img src="recursos/ELE/ele(2).jpg" alt=""></li>
+                    <li><img src="recursos/ELE/ele(3).jpg" alt=""></li>
+                    <li><img src="recursos/ELE/ele(4).jpg" alt=""></li>
+                    <li><img src="recursos/ELE/ele(5).jpg" alt=""></li>
+                    <li><img src="recursos/ELE/ele(6).jpg" alt=""></li>
+                    <li><img src="recursos/ELE/ele(7).jpg" alt=""></li>
+                    <li><img src="recursos/ELE/ele(8).jpg" alt=""></li>
+                    <li><img src="recursos/PAN/pan(1).jpg" alt=""></li>
+                    <li><img src="recursos/PAN/pan(2).jpg" alt=""></li>
+                    <li><img src="recursos/PAN/pan(3).jpg" alt=""></li>
+                    <li><img src="recursos/SEG/seg(1).jpg" alt=""></li>
+                    <li><img src="recursos/SEG/seg(2).jpg" alt=""></li>
+                    <li><img src="recursos/SEG/seg(3).jpg" alt=""></li>
+                    <li><img src="recursos/SEG/seg(4).jpg" alt=""></li>
+                    <li><img src="recursos/SEG/seg(5).jpg" alt=""></li>
+                    <li><img src="recursos/SEG/seg(6).jpg" alt=""></li>
+                    <li><img src="recursos/SEG/seg(7).jpg" alt=""></li>
+                    <li><img src="recursos/STE/ste(1).jpg" alt=""></li>
+                    <li><img src="recursos/STE/ste(2).jpg" alt=""></li>
+                    <li><img src="recursos/STE/ste(3).jpg" alt=""></li>
+                    <li><img src="recursos/STE/ste(4).jpg" alt=""></li>
+                    <li><img src="recursos/STE/ste(5).png" alt=""></li>
+                    <li><img src="recursos/TER/ter(1).jpg" alt=""></li>
+                    <li><img src="recursos/TER/ter(2).jpg" alt=""></li>
+                    <li><img src="recursos/TER/ter(3).jpg" alt=""></li>
+                    <li><img src="recursos/TER/ter(4).jpg" alt=""></li>
+                    <li><img src="recursos/TER/ter(5).jpg" alt=""></li>
                 </div>
             </div>
         </section>
@@ -185,7 +207,7 @@
     <footer class="pie">
         <li>PAGINA DESARROLLADA POR <a href="https://wa.me/+5493518560415">AGNIS - SOLUCIONES WEB &copy;</a></li>
     </footer>
-    <script src="js/carrusel"></script>
+    <script src="js/carrusel.js"></script>
     <script src="js/form.js"></script>
     <script src="js/servicios.js"></script>
     <script src="js/buttons.js"></script>
