--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!--DESC-->
     <meta name="description"
-        content="AS-Soluciones integrales es una empresa especializada en instalación de aires acondicionados, termotanques solares, energía solar, proyectos de instalación eléctrica y sistemas de vigilancia. También ofrecemos servicios de electricidad y certificaciones eléctricas. ¡Contáctanos y obtén soluciones integrales para tu hogar o negocio!">
+        content="ASUAR-Soluciones integrales es una empresa especializada en instalación de aires acondicionados, termotanques solares, energía solar, proyectos de instalación eléctrica y sistemas de vigilancia. También ofrecemos servicios de electricidad y certificaciones eléctricas. ¡Contáctanos y obtén soluciones integrales para tu hogar o negocio!">
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/init.css">
     <link rel="stylesheet" href="css/cabecera.css">
@@ -26,7 +26,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AS - Servicios Integrales</title>
+    <title>ASUAR - Servicios Integrales</title>
 </head>
 
 <body class="cuerpo">
@@ -130,8 +130,8 @@
             <div class="cont-clientes">
                 <div class="contenido clientes_texto">
                     <h2>Clientes satisfechos, nuestra mayor satisfacción</h2>
-                    <p class=""> nos enorgullecemos de proporcionar soluciones diseñadas a medida y adaptadas a las necesidades de cada cliente.</p>
-                    <legend class="">¡Únete a nuestra lista de clientes satisfechos hoy mismo!</legend>
+                    <!--<p class=""> nos enorgullecemos de proporcionar soluciones diseñadas a medida y adaptadas a las necesidades de cada cliente.</p>
+                    <legend class="">¡Únete a nuestra lista de clientes satisfechos hoy mismo!</legend>-->
                 </div>
                 <div class="contenido clientes_imagenes">
                     <li><img src="recursos/AA/aa-1(1).jpeg" alt=""></li>
