--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
     <link rel="stylesheet" href="css/mode.css">
     <link rel="stylesheet" href="css/resp.css">
-
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <!--OG-->
     <meta property="og:title" content="ASUAR - Servicios Integrales">
     <meta property="og:type" content="website">
