--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/clientes.css">
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/pie.css">
+    <link rel="stylesheet" href="css/splash.css">
 
     <link rel="stylesheet" href="css/mode.css">
     <link rel="stylesheet" href="css/resp.css">
@@ -58,6 +59,10 @@
         </div>
         <i class="fa-regular fa-lightbulb"></i>
     </header>
+    <div class="splashPane">
+        <object data="recursos/cartelesObra.svg" type="image/svg+xml"></object>
+        <i class="fa-solid fa-square-xmark"></i>
+    </div>
     <div class="absolutoMenu">
 
     </div>
@@ -222,6 +227,7 @@
     <script src="js/bgInicio.js"></script>
     <script src="js/buttonMode.js"></script>
     <script src="js/slider.js"></script>
+    <script src="js/bgSplash.js"></script>
 </body>
 
 </html>
