Modificacion de logo en metadatos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="ASUAR - Servicios Integrales">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.asuar.com.ar">
-    <meta property="og:image" content="https://www.asuar.com.ar/recursos/imagenes/LOGO-CELESTE-MARINO.png">
+    <meta property="og:image" content="https://www.asuar.com.ar/recursos/imagenes/logo-meta.jpg">
     <meta property="og:description"
         content="ASUAR-Soluciones integrales es una empresa especializada en instalación de aires acondicionados, termotanques solares, energía solar, proyectos de instalación eléctrica y sistemas de vigilancia. También ofrecemos servicios de electricidad y certificaciones eléctricas. ¡Contáctanos y obtén soluciones integrales para tu hogar o negocio!">
     <!--ICONS-->
