--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <meta property="og:title" content="ASUAR - Servicios Integrales">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.asuar.com.ar">
-    <meta property="og:image" content="https://www.asuar.com.ar/recursos/imagenes/logo-meta.jpg">
+    <meta property="og:image" content="https://www.asuar.com.ar/recursos/logo-meta.jpg">
     <meta property="og:description"
         content="ASUAR-Soluciones integrales es una empresa especializada en instalación de aires acondicionados, termotanques solares, energía solar, proyectos de instalación eléctrica y sistemas de vigilancia. También ofrecemos servicios de electricidad y certificaciones eléctricas. ¡Contáctanos y obtén soluciones integrales para tu hogar o negocio!">
     <!--ICONS-->
     <script src="https://kit.fontawesome.com/c8bf7962f3.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="recursos/imagenes/logo-meta.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="recursos/imagenes/LOGO-CELESTE-MARINO.png" type="image/x-icon">
     <!--META-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
