Mejorando el SplashScreen

--- a/index.html
+++ b/index.html
@@ -60,8 +60,17 @@
         <i class="fa-regular fa-lightbulb"></i>
     </header>
     <div class="splashPane">
-        <object data="recursos/cartelesObra.svg" type="image/svg+xml"></object>
         <i class="fa-solid fa-square-xmark"></i>
+        <div class="galeria-container">
+            <div id="contenido-grande"></div>
+            <div class="slider">
+              <div class="opcion" onclick="cambiarContenido(1)"></div>
+              <div class="opcion" onclick="cambiarContenido(2)"></div>
+              <div class="opcion" onclick="cambiarContenido(3)"></div>
+              <div class="opcion" onclick="cambiarContenido(4)"></div>
+            </div>
+          </div>
+          
     </div>
     <div class="absolutoMenu">
 
