--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     <div class="splashPane">
         <i class="fa-solid fa-square-xmark"></i>
         <div class="galeria-container">
-            <div id="contenido-grande"></div>
+            <div id="contenido-grande">
+                <img src='recursos/splash/splash2.jpeg' alt='Imagen 1'>
+            </div>
             <div class="slider">
               <div class="opcion" onclick="cambiarContenido(1)"></div>
               <div class="opcion" onclick="cambiarContenido(2)"></div>
