--- a/index.html
+++ b/index.html
@@ -64,15 +64,17 @@
         <div class="galeria-container">
             <div id="contenido-grande">
                 <img src='recursos/splash/splash2.jpeg' alt='Imagen 1'>
+                <object class="cinta" data="recursos/cinta.svg" type="image/svg+xml">
+                </object>
             </div>
             <div class="slider">
-              <div class="opcion" onclick="cambiarContenido(1)"></div>
-              <div class="opcion" onclick="cambiarContenido(2)"></div>
-              <div class="opcion" onclick="cambiarContenido(3)"></div>
-              <div class="opcion" onclick="cambiarContenido(4)"></div>
+                <div class="opcion" onclick="cambiarContenido(1)"></div>
+                <div class="opcion" onclick="cambiarContenido(2)"></div>
+                <div class="opcion" onclick="cambiarContenido(3)"></div>
+                <div class="opcion" onclick="cambiarContenido(4)"></div>
             </div>
-          </div>
-          
+        </div>
+
     </div>
     <div class="absolutoMenu">
 
